# AOC23

./: pyproject.toml
01/: solve.py
02/: solve.py
03/: solve.py
04/: solve.py
05/: fertilizer_to_water.txt  humidity_to_location.txt  light_to_temp.txt  seed_to_soil.txt  seeds.txt  soil_to_fertilizer.txt  solve.py  temp_to_humidity.txt  water_to_light.txt
06/: solve.py
07/: solve.py
08/: input.txt  solve.py
