[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = "Solutions for AdventOfCode 2023 event."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
rich = "^13.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
